--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -11,7 +11,8 @@ services:
             - 1337
         env_file: 
         - ./.env.prod
-        
+        restart: unless-stopped
+
     nginx:
         build: ./services/nginx
         ports: 
@@ -19,3 +20,4 @@ services:
             - 443:443
         depends_on: 
             - web
+        restart: unless-stopped
